--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2  #https://github.com/actions/setup-go
         with:
           go-version: 1.15
-      - run: go test
+      - run: go test  # 
       - run: go run math.go
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
