fix: Enviando imagem para o meu dockerhub

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,4 +29,4 @@ jobs:
             uses: docker/build-push-action@v2
             with:
                 push: true
-                tags: guilhermebsilva/cicd:latest
+                tags: guilhermedevops/cicd:latest
